# llm-eco-tracker

./: .gitignore  LICENSE  README.md  carbon_aware.py  download_mock_data.py  estimate_consumption.py  example_output.txt  pyproject.toml  requirements.txt  scheduler.py
.github/workflows/: publish-pypi.yml
llm_eco_tracker/: __init__.py  api.py  benchmarking.py  budget.py  downgrade.py  emissions.py  errors.py  execution.py  models.py  planning.py  report.py  scheduler.py
llm_eco_tracker/providers/: __init__.py  base.py  csv_forecast.py  electricity_maps.py  uk_carbon_intensity.py
llm_eco_tracker/telemetry/: __init__.py  base.py  runtime.py  sinks.py
llm_eco_tracker/telemetry/adapters/: __init__.py  _energy.py  anthropic.py  openai.py
scripts/: analyze_benchmark_results.py  circuit_breaker_demo.py  demo_support.py  download_mock_data.py  eco_fallback_demo.py  generate_paper_figures.py  langchain_agentic_demo.py  run_benchmark.py  run_openai_integration_benchmark.py  run_overhead_benchmark.py
tests/: test_anthropic_telemetry.py  test_benchmarking.py  test_budget.py  test_downgrade.py  test_electricity_maps_provider.py  test_openai_telemetry.py  test_planning.py  test_report.py
tests/fixtures/: benchmark_trace.csv  demo_dirty_forecast.csv  mock_forecast.csv
