[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-eco-tracker"
dynamic = ["version"]
description = "Carbon-aware scheduling and telemetry for LLM applications"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "EcoTracker Team" }
]
keywords = [
  "llm",
  "sustainability",
  "carbon-aware",
  "openai",
  "anthropic",
  "langchain",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "anthropic>=0.86.0",
  "ecologits>=0.10.0",
  "httpx>=0.28.0",
  "openai>=2.29.0",
  "python-dotenv>=1.0.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
benchmarks = [
  "matplotlib>=3.10.0",
  "scipy>=1.17.0",
]
langchain = [
  "langchain>=1.2.13",
  "langchain-openai>=1.1.12",
]
publish = [
  "build>=1.4.0",
  "twine>=6.2.0",
]
dev = [
  "build>=1.4.0",
  "langchain>=1.2.13",
  "langchain-openai>=1.1.12",
  "matplotlib>=3.10.0",
  "scipy>=1.17.0",
  "twine>=6.2.0",
]

[project.scripts]
ecotracker-report = "llm_eco_tracker.report:main"

[tool.setuptools.dynamic]
version = { attr = "llm_eco_tracker.__version__" }

[tool.setuptools.packages.find]
include = ["llm_eco_tracker*"]
